tests/fixtures/invalid/pow_int_list.py
# Cannot call pow() with Int, List[int]
x = pow(1, [1, 2, 3])
